# HacspecBulletproofs

./: .gitignore  linear-algebra-list.md  questions.md  readme.md  todo.md  urls.md
bulletproofs/src/: generators.rs  inner_product_proof.rs  lib.rs  util.rs
bulletproofs/src/range_proof/: dealer.rs  mod.rs  party.rs
code/: Cargo.toml
code/src/: linalg.rs
code/tests/: test_linalg.rs
curve25519-dalek/src/: lib.rs  ristretto.rs
hacspec/: Cargo.toml
hacspec/examples/: shell.nix  typecheck_examples.sh
hacspec/examples/bulletproofs/: Cargo.toml
hacspec/examples/bulletproofs/src/: bulletproofs.rs  dealer.rs  errors.rs  party.rs  transcript.rs  types.rs
hacspec/examples/bulletproofs/src/dealer/: types.rs
hacspec/examples/bulletproofs/src/party/: transcript.rs
hacspec/examples/bulletproofs/tests/: test-bulletproofs.rs
hacspec/examples/curve25519/src/: curve25519.rs
hacspec/examples/inner-product-proof/: Cargo.toml
hacspec/examples/inner-product-proof/diff/: new.rs  old.rs
hacspec/examples/inner-product-proof/src/: errors.rs  ipp.rs  linalg.rs  transcript.rs
hacspec/examples/inner-product-proof/src/transcript/: errors.rs
hacspec/examples/inner-product-proof/tests/: test_prop_ipp.rs  test_prop_linalg.rs
hacspec/examples/keccak/: Cargo.toml
hacspec/examples/keccak/src/: keccak.rs
hacspec/examples/keccak/tests/: test_prop_linalg.rs
hacspec/examples/linalg/: Cargo.toml  todo.md
hacspec/examples/linalg-field/: Cargo.toml  examples.md
hacspec/examples/linalg-field/src/: linalg.rs  main.rs
hacspec/examples/linalg-field/tests/: test_unit_linalg.rs
hacspec/examples/linalg/src/: linalg.rs  main.rs
hacspec/examples/linalg/tests/: test_linalg.rs  test_prop_linalg.rs  test_quickcheck_linalg.rs  test_unit_linalg.rs
hacspec/examples/merlin/: Cargo.toml
hacspec/examples/merlin/src/: merlin.rs  strobe.rs
hacspec/examples/merlin/tests/: test_prop_linalg.rs  test_prop_merlin.rs  test_unit_merlin.rs
hacspec/examples/pedersen/: Cargo.toml
hacspec/examples/pedersen/src/: pedersen.rs
hacspec/examples/pedersen/tests/: test_pedersen.rs
hacspec/examples/ristretto/src/: ristretto.rs
hacspec/examples/ristretto/tests/: test_prop_ristretto25519.rs  test_unit_ristretto25519.rs
hacspec/examples/ristretto25519/: Cargo.toml
hacspec/examples/ristretto25519/src/: ristretto25519.rs
hacspec/examples/ristretto25519/tests/: test_prop_ristretto25519.rs  test_ristretto25519.rs  test_unit_ristretto25519.rs  unit_ristretto25519.rs
hacspec/examples/secp256k1/: Cargo.toml
hacspec/examples/secp256k1/src/: secp256k1.rs  secp256k1_generators.txt
hacspec/examples/secp256k1/tests/: test_secp256k1.rs
hacspec/examples/wrapper-inner-product-proof/: Cargo.toml
hacspec/examples/wrapper-inner-product-proof/src/: ipp.rs
hacspec/examples/wrapper-ristretto25519/: Cargo.toml
hacspec/examples/wrapper-ristretto25519/src/: ristretto25519.rs
hacspec/examples/wrapper-ristretto25519/tests/: test_prop_ristretto25519.rs  test_unit_ristretto25519.rs
report/: main.tex  sample.bib
thesis/: main.tex  references.bib
thesis/creation-of-figures/geogebra/: EC-addition.ggb
