[package]
name = "hacspec-merlin"
version = "0.1.0"
authors = ["Rasmus Kirk <mail@rasmuskirk.com>"]
edition = "2018"

[lib]
path = "src/merlin.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-sha3 = { path = "../sha3" }
hacspec-ristretto = { path = "../ristretto25519" }

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
bulletproofs = { path = "../../../bulletproofs" }
merlin = { path = "../../../merlin" }
curve25519-dalek = "2"
quickcheck = "1"
