[package]
name = "hacspec-ristretto"
version = "0.1.0"
authors = ["Anders Wibrand Larsen <anderswila@hotmail.dk>", "Rasmus Kirk Jakobsen <mail@rasmuskirk.com>"]
edition = "2018"

[lib]
path = "src/ristretto25519.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-curve25519 = { path = "../curve25519" }

[dev-dependencies]
quickcheck = "1"
curve25519-dalek = "2"