[package]
name = "wrapper-hacspec-ipp"
version = "0.1.0"
authors = ["Rasmus Kirk <mail@rasmuskirk.com>"]
edition = "2018"

[lib]
path = "src/ipp.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
wrapper-hacspec-ristretto = { path = "../wrapper-ristretto25519" }
hacspec-linalg-field = { path = "../linalg-field" }
hacspec-merlin = { path = "../merlin" }
bulletproofs = { path = "../../../bulletproofs" }
merlin = "3"

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
curve25519-dalek-ng = "4"
sha3 = "0.9.1"
quickcheck = "1"
rand = "0.8"
